--- a/public/css/css-internal/landing.css
+++ b/public/css/css-internal/landing.css
@@ -130,10 +130,12 @@ html {
     padding: 10px 20px;
     height: 30rem;
     width: 90%;
+    object-fit: cover;
 }
 .header-landing .content-landing .page-image .frame-image img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .news {
     background-color: #f1f1f1;
@@ -173,11 +175,13 @@ html {
     width: 95%;
     height: 15rem;
     border-radius: 12px;
+    object-fit: cover;
 }
 .news .box-hot-news .image-news img {
     height: 100%;
     width: 100%;
     border-radius: 10px;
+    object-fit: cover;
 }
 .news .box-hot-news .title-hot-news {
     font-size: 18px;
@@ -490,6 +494,7 @@ footer .bottom-footer .text-bottom-footer {
         width: 70%;
         height: 20rem;
         padding: 5px 10px;
+        object-fit: cover;
     }
     .header-landing .content-landing .page-text {
         margin-top: 2rem;
