--- a/public/css/css-internal/master.css
+++ b/public/css/css-internal/master.css
@@ -244,6 +244,7 @@ input[type="number"] {
     height: 100%;
     display: flex;
     align-items: center;
+    object-fit: cover;
 }
 .sidebar.open .menu-dropdown li a .text-dropdown {
     background: linear-gradient(180deg, #ededed 0%, #f9f9f9 100%);
@@ -326,6 +327,7 @@ input[type="number"] {
 .dropdown-announcement .dropdown-item .img-announcement img {
     width: 2rem;
     height: 2rem;
+    object-fit: cover;
 }
 .dropdown-announcement .dropdown-item .text-announcement {
     width: 19rem;
@@ -361,6 +363,7 @@ input[type="number"] {
 .home-section .navbar .navbar-nav .nav-item .box-icon-user img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 
 .box-breadcrumb {
@@ -398,6 +401,7 @@ input[type="number"] {
 
 .home-section .content-home {
     padding: 1rem 2rem;
+    min-height: 100vh;
 }
 .home-section .content-home .box-content {
     background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
@@ -468,11 +472,11 @@ input[type="number"] {
     .table-scroll
     .table-master {
     color: #444;
-    border-collapse: collapse;
-    border-spacing: 0px;
     min-width: max-content;
-    margin-bottom: 1rem;
-    border-radius: 10px;
+    border-collapse: collapse;
+    margin-bottom: 5rem;
+    border-radius: 10px !important;
+    border: 1px solid #4b556b;
 }
 .home-section
     .content-home
@@ -506,6 +510,7 @@ input[type="number"] {
     .table-master
     td {
     border-left: 1px solid #4b556b;
+
     font-size: 14px;
     color: var(--text-color);
 }
@@ -564,6 +569,7 @@ td {
     img {
     width: 1.5rem;
     height: 1.5rem;
+    object-fit: cover;
 }
 .home-section
     .content-home
@@ -587,6 +593,7 @@ td {
     border-radius: 12px;
     padding: 8px;
     width: 6rem;
+    z-index: 199;
 }
 .home-section
     .content-home
@@ -599,6 +606,34 @@ td {
     font-size: 14px;
     font-weight: 600;
     color: var(--text-color);
+}
+.home-section
+    .content-home
+    .box-content
+    .outher-table
+    .table-scroll
+    .table-master
+    .dropdown-name {
+    width: 20rem;
+    padding: 5px 15px;
+    border-radius: 8px;
+    max-height: 5.5rem;
+    overflow-x: auto;
+}
+.home-section
+    .content-home
+    .box-content
+    .outher-table
+    .table-scroll
+    .table-master
+    .dropdown-name
+    li {
+    background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
+        linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box;
+    border: 1px solid transparent;
+    padding: 2px 4px;
+    margin-bottom: 2px;
+    border-radius: 6px;
 }
 .home-section
     .content-home
@@ -621,6 +656,18 @@ td {
     width: 100%;
     height: 6rem;
     border-radius: 8px;
+    object-fit: cover;
+}
+.home-section
+    .content-home
+    .box-content
+    .outher-table
+    .table-scroll
+    .table-master
+    .btn-edit-master
+    .fa {
+    font-weight: 600;
+    font-size: 15px;
 }
 .home-section
     .content-home
@@ -665,13 +712,22 @@ td {
     font-size: 16px;
     font-weight: 600;
 }
+.home-section
+    .content-home
+    .box-content
+    .outher-table
+    .table-scroll
+    .table-master
+    p {
+    margin: 0 0 5px;
+}
 .sidebar.open ~ .home-section .box-content .table-scroll {
     width: 72vw;
 }
 .footer {
     background: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
     box-shadow: -4px 6px 8px rgba(74, 78, 100, 0.1);
-    margin-top: 10rem;
+    margin-top: 5rem;
     padding: 10px 0;
 }
 .footer .text-footer {
@@ -712,8 +768,47 @@ td {
     font-weight: 600;
     color: var(--text-color);
 }
+.modal-role .modal-content .modal-body .down-form {
+    position: absolute;
+    margin-top: -30px;
+    left: 24rem;
+}
+.modal-role .modal-content .modal-body .down-form-full {
+    position: absolute;
+    margin-top: -30px;
+    left: 50rem;
+}
+.modal-role .modal-content .modal-body .down-form-kelas {
+    position: absolute;
+    margin-top: 5px;
+    left: 49rem;
+}
+.modal-role .modal-content .modal-body .down-form-jadwal {
+    position: absolute;
+    margin-top: 5px;
+    left: 23rem;
+}
+.modal-role .modal-content .modal-body .down-form-shift {
+    position: absolute;
+    margin-top: -28px;
+    left: 50rem;
+}
+.modal-role .modal-content .modal-body .down-form .fa,
+.modal-role .modal-content .modal-body .down-form-full .fa,
+.modal-role .modal-content .modal-body .down-form-kelas .fa,
+.modal-role .modal-content .modal-body .down-form-shift .fa,
+.modal-role .modal-content .modal-body .down-form-jadwal .fa {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-color);
+}
 .modal-role .modal-content .modal-body input[type="text"],
-.modal-role .modal-content .modal-body input[type="number"] {
+.modal-role .modal-content .modal-body input[type="number"],
+.modal-role .modal-content .modal-body input[type="date"],
+.modal-role .modal-content .modal-body input[type="email"],
+.modal-role .modal-content .modal-body input[type="time"],
+.modal-role .modal-content .modal-body select,
+.modal-role .modal-content .modal-body textarea {
     background: #f0f1f2;
     border-radius: 8px;
     font-size: 14px;
@@ -823,6 +918,7 @@ td {
     width: 100%;
     height: 8rem;
     border-radius: 6px;
+    object-fit: cover;
 }
 
 .modal-role .modal-content .modal-footer {
@@ -849,10 +945,163 @@ td {
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     display: flex;
+    border: none;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     margin-right: 5px;
+}
+.select-box {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    max-height: 15rem;
+    margin-bottom: 1rem;
+}
+.select-box .options-container {
+    background: white;
+    width: 100%;
+    display: none;
+    border-radius: 8px;
+    overflow: hidden;
+    order: 1;
+    color: var(--text-color);
+    margin-top: 3.5rem;
+}
+.select-box .option,
+.selected {
+    padding: 8px 20px;
+    cursor: pointer;
+}
+.select-box .option {
+    background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
+        linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box;
+    border: 1px solid transparent;
+    width: 98%;
+    margin-bottom: 3px;
+    border-radius: 8px;
+}
+.select-box .option label {
+    font-weight: 500 !important;
+}
+.select-box .option .radio {
+    display: none;
+}
+.selected {
+    background: #f0f1f2;
+    border-radius: 8px;
+    margin-bottom: 8px;
+    color: var(--text-color);
+    position: relative;
+    font-weight: 600;
+    font-size: 14px;
+    order: 0;
+    /* box-shadow: 0px 10px 70px 4px rgba(0, 0, 0, 0.13); */
+}
+.selected:after {
+    content: "";
+    position: absolute;
+    font-family: "Poppins", sans-serif;
+    right: 20px;
+    font-weight: 700;
+    color: black;
+    transform: rotate(180deg);
+    transition: all 0.4s;
+}
+.select-box .option:hover {
+    background: #f1fff3;
+}
+.select-box .option input:hover {
+    font-weight: 700px;
+}
+
+.search-box input[type="text"] {
+    width: 98%;
+    padding: 16px 16px;
+    font-size: 16px;
+    position: absolute;
+    /* outline: none; */
+    /* opacity: 0; */
+    display: none;
+    outline-offset: -10px;
+    z-index: 100;
+    background: var(--bg-onlywhite) !important;
+    border: none;
+}
+/* .search-box input:focus {
+  outline: none;
+} */
+.select-box .options-container.active {
+    max-height: 240px;
+    display: block;
+    overflow-y: scroll;
+    transition: all 0.4s;
+    /* margin-top: 54px; */
+}
+.select-box .options-container.active ~ .selected::after {
+    transform: rotateY(180deg);
+    /* top: -6px; */
+}
+.select-box .options-container::-webkit-scrollbar {
+    width: 7px;
+    background: #888;
+    border-radius: 8px;
+    height: 1px;
+}
+.select-box .options-container::-webkit-scrollbar-thumb {
+    background: #464749;
+    border-radius: 8px 8px 8px 8px;
+}
+.select-box .options-container.active ~ .search-box input {
+    display: block;
+    pointer-events: auto;
+}
+.modal-role .modal-content .modal-body .select-cekbox {
+    background: #f0f1f2;
+    padding: 6px 32px 6px 16px;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-color);
+    border-radius: 8px;
+    cursor: pointer;
+}
+.modal-role .modal-content .modal-body .ceklist {
+    margin-top: 1rem;
+    display: none;
+    max-height: 8rem;
+    overflow-y: auto;
+    transition: all 0.4s ease-in-out;
+}
+.modal-role .modal-content .modal-body .ceklist.open {
+    display: block;
+}
+.modal-role .modal-content .modal-body .ceklist .cekbox-permission .checkbox {
+    font-weight: 500 !important;
+}
+.modal-role .modal-content .modal-body .ceklist .cekbox-permission {
+    background: linear-gradient(#f0f1f2, #f0f1f2) padding-box,
+        linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box !important;
+}
+.modal-role
+    .modal-content
+    .modal-body
+    .ceklist
+    .cekbox-permission
+    .checkbox
+    input[type="checkbox"]:checked
+    ~ .check,
+.modal-role
+    .modal-content
+    .modal-body
+    .ceklist-ready
+    .cekbox-permission
+    .checkbox
+    input[type="checkbox"]:checked
+    ~ .check {
+    background-color: #83bc10 !important;
+}
+.modal-role .modal-content .modal-body .ceklist-ready {
+    margin-top: 8px;
 }
 @media screen and (max-width: 700px) {
     .modal-role .modal-content .modal-body .box-image-upload-master {
