--- a/public/css/css-internal/master.css
+++ b/public/css/css-internal/master.css
@@ -205,7 +205,8 @@ input[type="number"] {
 .sidebar.open li .tool {
     display: none;
 }
-.sidebar li .menu-dropdown {
+.sidebar li .menu-dropdown,
+.sidebar li .dropdown-list {
     background: var(--bg-blue);
     width: 90%;
     position: absolute;
@@ -216,37 +217,44 @@ input[type="number"] {
     display: none;
 }
 
-.sidebar li #dropdown-keuangan {
+.sidebar li #dropdown-keuangan,
+.sidebar li #dropdown-pack {
     cursor: pointer;
 }
 .sidebar.open li #dropdown-keuangan .box-icon {
     display: none;
 }
-.sidebar.open .menu-dropdown {
+.sidebar.open .menu-dropdown,
+.sidebar.open .dropdown-list {
     padding: 0 0 10px 10px;
 }
-.sidebar.open .menu-dropdown li {
+.sidebar.open .menu-dropdown li,
+.sidebar.open .dropdown-list li {
     margin: 3px 0 0 0;
 }
-.sidebar.open .menu-dropdown li a {
+.sidebar.open .menu-dropdown li a,
+.sidebar.open .dropdown-list li a {
     background: none;
     display: flex;
     align-items: center;
 }
 
-.sidebar.open .menu-dropdown li a .box-icon-dropdown {
+.sidebar.open .menu-dropdown li a .box-icon-dropdown,
+.sidebar.open .dropdown-list li a .box-icon-dropdown {
     width: 15px;
     height: 15px;
     margin-right: 8px;
 }
-.sidebar.open .menu-dropdown li a .box-icon-dropdown img {
+.sidebar.open .menu-dropdown li a .box-icon-dropdown img,
+.sidebar.open .dropdown-list li a .box-icon-dropdown img {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     object-fit: cover;
 }
-.sidebar.open .menu-dropdown li a .text-dropdown {
+.sidebar.open .menu-dropdown li a .text-dropdown,
+.sidebar.open .dropdown-list li a .text-dropdown {
     background: linear-gradient(180deg, #ededed 0%, #f9f9f9 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -254,7 +262,8 @@ input[type="number"] {
     font-size: 14px;
     font-weight: 500;
 }
-.sidebar.open .menu-dropdown li a:hover .text-dropdown {
+.sidebar.open .menu-dropdown li a:hover .text-dropdown,
+.sidebar.open .dropdown-list li a:hover .text-dropdown {
     font-weight: 800;
 }
 .home-section {
