--- a/public/css/css-internal/dashboard.css
+++ b/public/css/css-internal/dashboard.css
@@ -9,14 +9,14 @@
 a {
     text-decoration: none;
 }
-/* input::-webkit-outer-spin-button,
+input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    -webkit-appearance: none;
+    margin: 0;
 }
 input[type="number"] {
-  -moz-appearance: textfield;
-} */
+    -moz-appearance: textfield;
+}
 :root {
     --bg-white: #f1f1f1;
     --bg-gradian: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
@@ -24,6 +24,7 @@ input[type="number"] {
     --bg-text: linear-gradient(180deg, #ededed 0%, #f9f9f9 100%);
     --bg-secondary: #f9f9f9;
     --bg-onlywhite: #ffffff;
+    --bg-gray: #f0f1f2;
     --bg-button-primary: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
 }
 body {
@@ -440,7 +441,7 @@ button.dropdown-toggle {
 .footer {
     background: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
     box-shadow: -4px 6px 8px rgba(74, 78, 100, 0.1);
-    margin-top: 10rem;
+    margin-top: 3rem;
     padding: 10px 0;
 }
 .footer .text-footer {
@@ -807,6 +808,7 @@ button.dropdown-toggle {
 .new-news .box-news .box-form .box-image-news img {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     object-fit: cover;
 }
 .new-news .box-news .box-form .box-image-news .btn-upload {
@@ -941,6 +943,7 @@ button.dropdown-toggle {
 /* ==================== CSS Untuk profile ================================ */
 .profile {
     margin: 2rem 0;
+    min-height: 100vh;
 }
 .profile .box-profile,
 .profile .box-student-card {
@@ -983,6 +986,8 @@ button.dropdown-toggle {
 .profile .box-profile .box-student-profile .profile-student img {
     width: 100%;
     height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
 }
 .profile .box-profile .box-student-profile .name-student {
     color: var(--text-color);
@@ -1287,6 +1292,305 @@ button.dropdown-toggle {
     color: var(--text-color);
 }
 /* ==================== Akhir CSS Untuk formulir =========================*/
+
+/* ==================== CSS Untuk Absensi ===================================== */
+.profile .box-biografi.present {
+    min-height: 10rem;
+}
+.profile .box-biografi label {
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-color);
+    margin-bottom: 6px;
+    margin-left: 8px;
+}
+.profile .box-biografi .history-present {
+    background: var(--bg-gray);
+    color: #808da6;
+    font-weight: 500;
+    font-size: 12px;
+    border: 1px solid #808da6;
+    padding: 5px 15px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+.profile .box-biografi .history-present .fa {
+    font-size: 16px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.profile .box-biografi .list-history-present {
+    margin-top: 10px;
+    margin-bottom: 1rem;
+    max-height: 15rem;
+    overflow-x: auto;
+    transition: all 0.3s ease-in-out;
+    display: none;
+}
+.profile .box-biografi .list-history-present.null {
+    color: var(--text-color);
+    font-weight: 600;
+}
+.profile .box-biografi .list-history-present.show {
+    display: block;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background: #fff;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--bg-gradian);
+    border-radius: 8px;
+}
+.profile .box-biografi .list-history-present .list-history {
+    background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
+        linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box;
+    border: 1px solid transparent;
+    padding: 8px 20px;
+    border-radius: 10px;
+    margin-bottom: 8px;
+}
+.profile .box-biografi .list-history-present .list-history .time-present {
+    font-size: 13px;
+    font-weight: 400;
+    color: var(--text-color);
+}
+.profile .box-biografi .list-history-present .list-history .status-present h6 {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 3px;
+}
+.profile
+    .box-biografi
+    .list-history-present
+    .list-history
+    .status-present
+    h6#izin {
+    color: #ffb711;
+}
+.profile
+    .box-biografi
+    .list-history-present
+    .list-history
+    .status-present
+    h6#absen {
+    color: #ff4238;
+}
+.profile
+    .box-biografi
+    .list-history-present
+    .list-history
+    .status-present
+    h6#sakit {
+    color: #83bc10;
+}
+.profile
+    .box-biografi
+    .list-history-present
+    .list-history
+    .status-present
+    .status {
+    color: #0e1533;
+    font-size: 10px;
+    text-align: center;
+    font-weight: 500;
+}
+.profile .box-biografi input[type="text"],
+.profile .box-biografi input[type="number"],
+.profile .box-biografi input[type="date"],
+.profile .box-biografi input[type="time"] {
+    background: #f0f1f2;
+    padding: 8px 12px;
+    border-radius: 20px;
+    border: 1px solid #808da6;
+    font-size: 12px;
+    font-weight: 600;
+    color: #808da6;
+}
+.profile .box-biografi input[type="text"]:focus {
+    outline: none;
+    border: none;
+}
+.profile .box-biografi .upload-document {
+    background: #f0f1f2;
+    padding: 8px 12px;
+    border-radius: 20px;
+    border: 1px solid #808da6;
+    font-size: 12px;
+    font-weight: 600;
+    color: #808da6;
+    cursor: pointer;
+}
+.profile .box-biografi .btn-submit {
+    background: var(--bg-gradian);
+    padding: 5px 3rem;
+    border-radius: 8px;
+    color: var(--bg-secondary);
+    font-size: 13px;
+    font-weight: 500;
+    border: none;
+    margin-top: 15px;
+}
+.profile .box-biografi .icon-input {
+    position: absolute;
+    right: 13%;
+    margin-top: -2rem;
+}
+.profile .box-biografi .icon-input .fa {
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.profile .box-biografi select {
+    background: none;
+    border-radius: 20px;
+    padding: 8px 12px;
+    font-size: 12px;
+    font-weight: 600;
+    color: var(--text-color);
+}
+.profile .box-biografi #show-list-box-biografi {
+    display: none;
+}
+
+.profile .box-biografi #show-list-box-biografi.show {
+    display: block;
+}
+.profile
+    .box-profile
+    .box-student-profile
+    .btn-choice-monitoring.active
+    ~ .profile
+    .box-biografi
+    #show-list-box-biografi {
+    display: block;
+}
+.profile .box-student-card .icon-camera img {
+    width: 7rem;
+    object-fit: cover;
+    height: 5.5rem;
+}
+.profile .box-student-card .text-present {
+    margin-top: 14px;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 500;
+}
+.profile .box-student-card .box-btn-present {
+    margin: auto;
+}
+.profile .box-student-card .btn-present {
+    text-decoration: none;
+    background-color: #f1f1f1;
+    border-radius: 6px;
+    padding: 6px 2rem;
+    font-size: 14px;
+    color: var(--text-color);
+    border: 1px solid #000;
+    font-weight: 500;
+    cursor: pointer;
+    margin-top: 1rem;
+}
+/* ==================== CSS Untuk Monitoring ============================ */
+.profile .box-profile .box-student-profile .btn-choice-monitoring {
+    background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
+        linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    text-decoration: none;
+    text-align: center;
+    width: 85%;
+    padding: 5px 0;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-color);
+    margin: auto;
+    cursor: pointer;
+    box-shadow: 2px 0px 4px rgba(74, 78, 100, 0.1),
+        -2px 3px 4px rgba(74, 78, 100, 0.1);
+}
+.profile .box-profile .box-student-profile .btn-choice-monitoring.active,
+.profile .box-profile .box-student-profile .btn-choice-monitoring:hover {
+    background: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
+    color: var(--bg-secondary);
+}
+/* ==================== Akhir CSS Untuk Monitoring ============================ */
+/* ==================== CSS untuk absensi ===================================== */
+.profile .box-profile .webcam-present {
+    width: 100%;
+    margin-top: 1rem;
+}
+.profile .box-profile .webcam-present h6 {
+    font-size: 16px;
+    font-weight: 600;
+    color: var(--text-color);
+    text-align: center;
+}
+.profile .box-profile .webcam {
+    width: 400px;
+    height: 330px;
+    margin: auto;
+    border-radius: 6px;
+    /* border: 1px solid black; */
+}
+.profile .box-profile .btn-webcam {
+    width: 3rem;
+    height: 3rem;
+    border: 6px solid #808da6;
+    margin: 5px auto;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.profile .box-profile .btn-refresh {
+    width: 3rem;
+    height: 3rem;
+    border: 2px solid #f35912;
+    margin: 5px auto;
+    border-radius: 50%;
+    justify-content: center;
+    align-items: center;
+    display: none;
+    cursor: pointer;
+}
+.profile .box-profile .btn-refresh .fa {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--text-color);
+}
+.profile .box-profile .webcam-present .time-webcam-present {
+    margin-top: 1rem;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+.profile .box-profile .webcam-present .time-webcam-present table {
+    margin: auto;
+}
+.profile .box-profile .webcam-present .time-webcam-present tr td {
+    font-size: 14px;
+    color: var(--text-color);
+    font-weight: 500;
+}
+.profile .box-profile .webcam-present .time-webcam-present .date-webcam {
+    font-weight: 600;
+    padding-right: 1.5rem;
+}
+.profile .box-profile .webcam-present .btn-submit-present {
+    border: none;
+    margin-top: 2rem;
+    font-size: 13px;
+    font-weight: 600;
+    color: var(--bg-secondary);
+    padding: 6px 3rem;
+    border-radius: 6px;
+    background: var(--bg-gradian);
+}
+/* ==================== Akhir CSS untuk absensi =============================== */
 @media screen and (max-width: 700px) {
     .header-dashboard {
         margin: 2rem 0;
@@ -1539,5 +1843,13 @@ button.dropdown-toggle {
     }
     .show-hide {
         left: 16rem;
+    }
+    .profile .box-student-card .icon-camera img {
+        width: 3.5rem;
+        height: 2.8rem;
+    }
+    .profile .box-profile .webcam {
+        width: 300px;
+        height: 250px;
     }
 }
