--- a/public/css/css-internal/dashboard.css
+++ b/public/css/css-internal/dashboard.css
@@ -179,6 +179,7 @@ button.dropdown-toggle {
 }
 .box-breadcrumb .breadcrumb .breadcrumb-item a {
   color: var(--text-color);
+  text-decoration: none;
 }
 .box-breadcrumb .breadcrumb .breadcrumb-item a:hover {
   font-weight: 700;
@@ -524,7 +525,7 @@ button.dropdown-toggle {
   font-weight: 500;
 }
 .forgot-password .box-forgot .box-input-forgot .form-forgot input {
-  background: rgba(75, 85, 107, 0.05);
+  background-color: rgba(75, 85, 107, 0.05);
   border-radius: 10px;
   border: none;
   width: 100%;
@@ -1246,7 +1247,7 @@ button.dropdown-toggle {
 .formulir .box-formulir .box-form-input textarea,
 .formulir .box-formulir .box-form-input input {
   border-radius: 10px;
-  background: #f0f1f2;
+  background-color: #f0f1f2;
   color: var(--text-color);
   font-weight: 500;
   font-size: 12px;
@@ -1404,13 +1405,25 @@ button.dropdown-toggle {
 .profile .box-biografi input[type="number"],
 .profile .box-biografi input[type="date"],
 .profile .box-biografi input[type="time"] {
-  background: #f0f1f2;
+  background-color: #f0f1f2;
   padding: 8px 12px;
   border-radius: 20px;
   border: 1px solid #808da6;
   font-size: 12px;
   font-weight: 600;
   color: #808da6;
+}
+.profile .box-biografi.present input.bg-calendar {
+  background-image: url("/images/internal-images/icon-calendar-fa.png");
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 18px 16px;
+}
+.profile .box-biografi.present input.bg-time {
+  background-image: url("/images/internal-images/icon-clock.png");
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 18px 16px;
 }
 .profile .box-biografi input[type="text"]:focus {
   outline: none;
@@ -1953,6 +1966,49 @@ button.dropdown-toggle {
   justify-content: center;
   align-items: center;
 }
+.profile .box-profile .select-mapel {
+  width: 20%;
+  margin-right: 8px;
+}
+.profile .box-profile .btn-select {
+  background: var(--bg-gradian);
+  color: var(--bg-secondary);
+  font-size: 13px;
+  font-weight: 500;
+  padding: 5px 2.5rem;
+  border-radius: 8px;
+  border: none;
+}
+.profile .box-profile.mapel {
+  min-height: calc(100vh - 210px);
+}
+.profile .box-profile.mapel .box-schedule h6 {
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+  color: var(--text-color);
+  margin-bottom: 1rem;
+}
+.profile .box-profile.mapel .box-schedule .box-mapel-schedule {
+  background: var(--bg-secondary);
+  width: 100%;
+  margin: auto;
+  box-shadow: 2px 0px 4px rgba(74, 78, 100, 0.1),
+    -2px 3px 4px rgba(74, 78, 100, 0.1);
+  border-radius: 6px;
+  padding: 14px 1.3rem;
+  margin-bottom: 10px;
+}
+.profile
+  .box-profile.mapel
+  .box-schedule
+  .box-mapel-schedule
+  .content-schedule {
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--text-color);
+  margin-bottom: 6px;
+}
 /* ==================== Akhir CSS Untuk Jadwal ================================ */
 @media screen and (max-width: 700px) {
   .header-dashboard {
@@ -2229,5 +2285,12 @@ button.dropdown-toggle {
   }
   .profile .box-profile .box-icon-schedule {
     margin: auto;
+  }
+  .profile .box-profile .select-mapel {
+    width: 100%;
+    margin-bottom: 12px;
+  }
+  .profile .box-profile .btn-select {
+    width: 100%;
   }
 }
