--- a/public/css/css-internal/master.css
+++ b/public/css/css-internal/master.css
@@ -502,10 +502,12 @@ input[type="number"] {
   .table-master {
   color: #444;
   width: 100%;
+  max-width: 100%;
   border-collapse: collapse;
   margin-bottom: 5rem;
   border-radius: 10px !important;
-  border: 1px solid #4b556b;
+  border-left: 1px solid #4b556b;
+  border-bottom: 1px solid #4b556b;
 }
 .home-section
   .content-home
@@ -567,7 +569,7 @@ td {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 6rem;
 }
 .home-section .content-home .box-content .outher-table .btn-foto-master.member {
   padding: 6px 10px;
@@ -614,7 +616,6 @@ td {
   .box-content
   .outher-table
   .table-scroll
-  .table-master
   .dropdown-foto {
   border-radius: 12px;
   padding: 8px;
@@ -626,7 +627,6 @@ td {
   .box-content
   .outher-table
   .table-scroll
-  .table-master
   .dropdown-foto
   h6 {
   font-size: 14px;
@@ -667,6 +667,20 @@ td {
   .box-foto-master
   img {
   margin: auto;
+  width: 2em;
+  height: 2rem;
+  border-radius: 8px;
+  object-fit: cover;
+}
+.home-section
+  .content-home
+  .box-content
+  .outher-table
+  .table-scroll
+  .fl-table
+  .box-foto-master
+  img {
+  margin: auto;
   width: 100%;
   height: 6rem;
   border-radius: 8px;
@@ -677,7 +691,6 @@ td {
   .box-content
   .outher-table
   .table-scroll
-  .table-master
   .btn-edit-master
   .fa {
   font-weight: 600;
@@ -1172,6 +1185,51 @@ div.dataTables_scrollHead table.dataTable tr {
   background: var(--bg-blue);
   border-radius: 8px;
 }
+.table-master > tbody {
+  vertical-align: middle !important;
+}
+
+/* .table-wrapper {
+  margin: 10px 70px 70px;
+  box-shadow: 0px 35px 50px rgba(0, 0, 0, 0.2);
+} */
+
+.fl-table {
+  border-radius: 5px;
+  font-size: 14px;
+  border: none;
+  border-collapse: collapse;
+  width: 100%;
+  max-width: 100%;
+  background-color: white;
+  font-weight: 400;
+  margin: 2rem 0;
+  border: 1px solid #4b556b;
+}
+
+.fl-table td,
+.fl-table th {
+  text-align: center;
+  padding: 5px 8px;
+}
+
+.fl-table td {
+  border-right: 1px solid #4b556b;
+  font-size: 12px;
+}
+
+.fl-table thead th {
+  color: var(--text-color);
+  font-size: 14px;
+  background: #f0f1f2;
+  border-right: 1px solid #4b556b;
+  border-bottom: 1px solid #4b556b;
+}
+
+.fl-table tr:nth-child(even) {
+  background: #f8f8f8;
+}
+
 @media screen and (max-width: 700px) {
   .modal-role .modal-content .modal-body .box-image-upload-master {
     width: 100%;
