--- a/public/css/css-internal/dashboard.css
+++ b/public/css/css-internal/dashboard.css
@@ -1538,6 +1538,23 @@ button.dropdown-toggle {
   background: linear-gradient(259.17deg, #3774c3 0%, #2e447c 100%);
   color: var(--bg-secondary);
 }
+.btn .btn-choice-monitoring {
+  background: linear-gradient(#f9f9f9, #f9f9f9) padding-box,
+  linear-gradient(rgba(55, 116, 195, 1), rgba(46, 68, 124, 1)) border-box;
+border: 1px solid transparent;
+border-radius: 8px;
+text-decoration: none;
+text-align: center;
+width: 85%;
+padding: 5px 0;
+font-size: 14px;
+font-weight: 600;
+color: var(--text-color);
+margin: auto;
+cursor: pointer;
+box-shadow: 2px 0px 4px rgba(74, 78, 100, 0.1),
+  -2px 3px 4px rgba(74, 78, 100, 0.1);
+}
 
 .down-form {
   position: relative;
